tdf#129883 Section links are lost on save and reload

Revert "convert XMLSectionSourceImportContext to FastParser APIs"
This reverts commit ccdcc25a085299bda45bc5ea4b3594e856f2d315.

THis was one of my earliest fastparser attempts before I properly
understood the weirde workings of the SvImportXML stuff.

Change-Id: I729467cb513740d36c0483eb6f8c84ffa4cab578
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87038
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>